--- a/rebar.config
+++ b/rebar.config
@@ -78,8 +78,8 @@
         {aestratum_lib, {git, "https://github.com/aeternity/aestratum_lib.git",
                         {ref, "cee4b3c"}}},
 
-        {ecrecover, {git, "https://github.com/aeternity/ecrecover.git",
-                    {ref, "74b7816"}}},
+        {ecrecover, {git, "https://github.com/thepiwo/ecrecover.git",
+                    {ref, "9f7ff3a0"}}},
 
         {emcl, {git, "https://github.com/aeternity/emcl.git",
                {ref, "e988f69"}}},
