WIP further instrumentation, new mnesia_rocksdb vsn

--- a/config/sys.config
+++ b/config/sys.config
@@ -138,7 +138,8 @@
     {sasl_error_logger, false}
   ]},
 
-  {mnesia, [{dir, "data/mnesia"}]},
+  {mnesia, [{dir, "data/mnesia"},
+  	    {debug, trace}]},
 
   {mnesia_rocksdb, [{standalone_default_vsn, 1},
                     {mnesia_compatible_aborts, true}]},
