Add buildx CI jobs

--- a/.circleci/config/commands/@docker.yml
+++ b/.circleci/config/commands/@docker.yml
@@ -44,6 +44,45 @@ docker_build:
               sleep 1;
           done;
 
+docker_buildx:
+  parameters:
+    tag:
+      type: string
+  steps:
+    - run:
+        name: Install emulation dependencies
+        command: |
+          sudo apt-get update && sudo apt-get install -y qemu binfmt-support qemu-user-static
+    - run:
+        name: Install buildx
+        command: |
+          mkdir -p ~/.docker/cli-plugins
+          baseUrl="https://github.com/docker/buildx/releases/download"
+          fileName="buildx-v<< pipeline.parameters.buildx-version >>.linux-amd64"
+          url="${baseUrl}/v<< pipeline.parameters.buildx-version >>/${fileName}"
+          curl -sSL -o ~/.docker/cli-plugins/docker-buildx $url
+          chmod a+x ~/.docker/cli-plugins/docker-buildx
+    - run:
+        name: Setup buildx
+        command: |
+          docker buildx install
+          docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+          docker context create aeternity
+          docker buildx create --use --platform << pipeline.parameters.buildx_platforms >> aeternity
+          docker buildx inspect --builder aeternity --bootstrap
+    - docker_login
+    - unless:
+        condition: << parameters.latest >>
+        steps:
+          - run:
+              name: Build and push docker image to docker.io registry
+              environment:
+                DOCKER_CLI_EXPERIMENTAL: enabled
+              command: |
+                docker buildx build --progress=plain --push \
+                --platform << pipeline.parameters.buildx_platforms >> \
+                -t << pipeline.parameters.docker_repo >>:<< parameters.tag >> .
+
 docker_tag:
   parameters:
     src:
