--- a/.circleci/config/executors/@executors.yml
+++ b/.circleci/config/executors/@executors.yml
@@ -49,3 +49,9 @@ machine_2004:
   environment:
     OTP_VERSION: 23.3.4.5
     LIBSODIUM_VERSION: "1.0.16"
+
+buildx:
+  machine:
+    image: ubuntu-2004:current
+    resource_class: xlarge
+  working_directory: /home/circleci/aeternity
