Upgrade aesophia and aesophia_aci_encoder test deps

--- a/rebar.config
+++ b/rebar.config
@@ -104,10 +104,6 @@
         {trace_runner, {git, "https://github.com/uwiger/trace_runner.git",
                         {ref, "1acb6e56"}}},
 
-        % for hyperchains and the testing suite
-        {aesophia_aci_encoder, {git, "https://github.com/aeternity/aesophia_aci_encoder",
-          {ref, "110813d"}}},
-
         % for the online telecom style CLI
         {ecli, {git, "https://github.com/mgmtd/ecli",
           {ref, "eb06324"}}}
@@ -220,10 +216,11 @@
                     {dist_node, [{setcookie, 'aeternity_cookie'},
                                  {sname, 'aeternity_ct@localhost'}]},
                     {deps, [{meck, "0.8.12"},
-                            {aesophia, {git, "https://github.com/aeternity/aesophia.git", {ref,"e3e35aa"}}},
+                            {aesophia, {git, "https://github.com/aeternity/aesophia.git", {ref,"4ae2472"}}},
                             {aesophia_cli, {git, "https://github.com/aeternity/aesophia_cli", {ref,"5f03a89"}}},
                             {aestratum_client, {git, "https://github.com/aeternity/aestratum_client", {ref, "adb0993"}}},
-                            {websocket_client, {git, "https://github.com/aeternity/websocket_client", {ref, "95ef9de"}}}
+                            {websocket_client, {git, "https://github.com/aeternity/websocket_client", {ref, "95ef9de"}}},
+                            {aesophia_aci_encoder, {git, "https://github.com/aeternity/aesophia_aci_encoder", {ref, "8d59d3b"}}}
                            ]}
                    ]},
             {prod, [{relx, [{dev_mode, false},
